syntax = "proto3";

message Person {
	string last_name = 1;
	string first_name = 2;
	string date_of_birth = 3;
}